--- a/learn_bootstrap/music_store.html
+++ b/learn_bootstrap/music_store.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+		<!-- <link rel="stylesheet" href="/learn_bootstrap/style.css"> -->
     <title>YO</title>
   </head>
   <body>
@@ -20,9 +20,37 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="col-2">
-					<img src="./assests/Album.gif" alt="">
-				</div> -->
+			</div>
+			<div class="row">
+				<div class="col-3">
+					<img class="w-100" src="./assests/Album.gif" alt="">
+				</div>
+				<div class="col-9">
+					<div class="mx-auto text-center">
+						<div class="jumbotron p-4">
+							<div>
+									<h2>Good Album</h2>
+									<h2>Good Artist</h2>
+							</div>
+							<p>
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+								Some things about the artist
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
