--- a/learn_bootstrap/index.html
+++ b/learn_bootstrap/index.html
@@ -13,11 +13,20 @@
   <body>
 		<div class="container">
 			<div class="row">
-				<div class="col-6 col-md-4"><h1>first</h1> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac feugiat sed lectus vestibulum mattis ullamcorper velit. Tellus at urna condimentum mattis pellentesque id nibh. Proin libero nunc consequat interdum varius. Ac felis donec et odio pellentesque diam volutpat commodo. Nibh tortor id aliquet lectus proin nibh nisl condimentum. Egestas purus viverra accumsan in nisl. 
+				<div class="col-6 col-md-4">
+					<h3>Fisrt thing</h3>
+					<div class="row">
+						<div class="col-md-6">
+							<h3>First nest</h3>
+						</div>
+						<div class="col-md-6">
+							<h3>second nest</h3>
+						</div>
+					</div> 
 				</div>
-				<div class="col-6 col-md-4"><h1>sec</h1> 2 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac feugiat sed lectus vestibulum mattis ullamcorper velit. Tellus at urna condimentum mattis pellentesque id nibh. Proin libero nunc consequat interdum varius. Ac felis donec et odio pellentesque diam volutpat commodo. 
+				<div class="col-6 col-md-4"><h3>sec</h3> 2 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac feugiat sed lectus vestibulum mattis ullamcorper velit. Tellus at urna condimentum mattis pellentesque id nibh. Proin libero nunc consequat interdum varius. Ac felis donec et odio pellentesque diam volutpat commodo. 
 				</div>
-				<div class="col-12 col-md-4 "><h1>third</h1> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac feugiat sed lectus vestibulum mattis ullamcorper velit. Tellus at urna condimentum mattis pellentesque id nibh. 
+				<div class="col-12 col-md-4 "><h3>third</h3> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac feugiat sed lectus vestibulum mattis ullamcorper velit. Tellus at urna condimentum mattis pellentesque id nibh. 
 				</div>
 			</div>
 		</div>
