--- a/learn_bootstrap/music_store.html
+++ b/learn_bootstrap/music_store.html
@@ -22,10 +22,10 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-3">
+				<div class="col-sm-4 col-md-3 ">
 					<img class="w-100" src="./assests/Album.gif" alt="">
 				</div>
-				<div class="col-9">
+				<div class="col-sm-12 col-md-9">
 					<div class="mx-auto text-center">
 						<div class="jumbotron p-4">
 							<div>
