--- a/learn2/index3.html
+++ b/learn2/index3.html
@@ -22,7 +22,7 @@
 								// this.setState((prevState,props) => {
 								// 	return {count: prevState.count + 1}
 								// });
-								this.setState({count: this.state.count + 1});
+								this.setState({count: !this.state.count});
 							}
 							render(){
 									console.log("HERE");
