--- a/learn_bootstrap/index_center.html
+++ b/learn_bootstrap/index_center.html
@@ -11,6 +11,13 @@
 				<title>YO</title>
 			</head>
 <body>
+		<div>
+				<div class="d-flex justify-content-start">...</div>
+				<div class="d-flex justify-content-end">...</div>
+				<div class="d-flex justify-content-center">...</div>
+				<div class="d-flex justify-content-between">...</div>
+				<div class="d-flex justify-content-around">...</div>
+		</div>
 		<div class="container bg-faded py-3">
 				<h1 class="text-center">Centering in Bootstrap 4</h1>
 				<div class="row">
