--- a/learn_bootstrap/offset.html
+++ b/learn_bootstrap/offset.html
@@ -12,14 +12,14 @@
   </head>
   <body>
 		<div class="container">
-			<!-- <div class="row">
+			<div class="row">
 				<div class="col-md-4 offset-md-2"> <h3>One</h3> This is a sentence. This is a sentence. This is a sentence. This is a sentence.</div>
 				<div class="col-md-4"> <h3>Two</h3> This is a sentence. This is a sentence. This is a sentence. This is a sentence.</div>
 			</div>
 			<div class="row">
 				<div class="col-12 col-md-6 col-md-push-6"> <h3>VERY IMPORTANT</h3> This is a sentence. This is a sentence. This is a sentence. This is a sentence.</div>
 				<div class="col-12 col-md-6 col-md-pull-6"> <h3>NOT VERY IMPORTANT</h3> This is a sentence. This is a sentence. This is a sentence. This is a sentence.</div>
-			</div> -->
+			</div>
 				<div class="row">
 					<div class="col-md-9 order-2">.col-md-9 .col-md-push-3</div>
 					<div class="col-md-3 order-1">.col-md-3 .col-md-pull-9</div>
