--- a/learn_bootstrap/offset.html
+++ b/learn_bootstrap/offset.html
@@ -17,8 +17,8 @@
 				<div class="col-md-4"> <h3>Two</h3> This is a sentence. This is a sentence. This is a sentence. This is a sentence.</div>
 			</div>
 			<div class="row">
-				<div class="col-12 col-md-6 col-md-push-6"> <h3>VERY IMPORTANT</h3> This is a sentence. This is a sentence. This is a sentence. This is a sentence.</div>
-				<div class="col-12 col-md-6 col-md-pull-6"> <h3>NOT VERY IMPORTANT</h3> This is a sentence. This is a sentence. This is a sentence. This is a sentence.</div>
+				<div class="col-12 col-md-6 order-1 order-md-2"> <h3>VERY IMPORTANT</h3> This is a sentence. This is a sentence. This is a sentence. This is a sentence.</div>
+				<div class="col-12 col-md-6 order-2 order-md-1"> <h3>NOT VERY IMPORTANT</h3> This is a sentence. This is a sentence. This is a sentence. This is a sentence.</div>
 			</div>
 				<div class="row">
 					<div class="col-md-9 order-2">.col-md-9 .col-md-push-3</div>
