Learning BS justification

--- a/learn_bootstrap/index_center.html
+++ b/learn_bootstrap/index_center.html
@@ -13,7 +13,7 @@
 <body>
 		<div>
 				<div class="d-flex justify-content-start">...</div>
-				<div class="d-flex justify-content-end">...</div>
+				<div class="d-flex justify-content-end mr-5"><img class="" src="//placehold.it/200x150?text=mx-auto"></div>
 				<div class="d-flex justify-content-center">...</div>
 				<div class="d-flex justify-content-between">...</div>
 				<div class="d-flex justify-content-around">...</div>
