--- a/learn_bootstrap/BS_doc.html
+++ b/learn_bootstrap/BS_doc.html
@@ -12,7 +12,7 @@
     <title>BS Doc</title>
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col"><div class="cus-bg-big"></div></div>
         <div class="col"><div class="cus-bg-big"></div></div>
@@ -26,7 +26,31 @@
         <div class="col"><div class="cus-bg-big"></div></div>
         <div class="col"><div class="cus-bg-big"></div></div>
       </div>
-    </div>
+    </div> -->
+    <div class="container">
+        <div class="row justify-content-md-center">
+          <div class="col col-lg-2 cbg">
+            1 of 3
+          </div>
+          <div class="col cbg" >
+            Variable 
+          </div>
+          <div class="col col-lg-2 cbg">
+            3 of 3
+          </div>
+        </div>
+        <div class="row">
+          <div class="col cbg">
+            1 of 3
+          </div>
+          <div class="col-md-auto cbg">
+            Variable width content
+          </div>
+          <div class="col col-lg-2 cbg">
+            3 of 3
+          </div>
+        </div>
+      </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
