--- a/learn_bootstrap/BS_doc.html
+++ b/learn_bootstrap/BS_doc.html
@@ -51,6 +51,34 @@
           </div>
         </div>
       </div>
+      <!-- Negative margins -->
+      <div class="container px-lg-5">
+        <div class="row mx-lg-n5 ">
+          <div class="col py-3 px-lg-5 border bg-light cbg">Custom column padding</div>
+          <div class="col py-3 px-lg-5 border bg-light cbg">Custom column padding</div>
+        </div>
+      </div>
+      <!-- row-col-numbers -->
+      <div class="container">
+          <div class="row row-cols-5">
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+          </div>
+        </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
