--- a/learn_bootstrap/BS_doc.html
+++ b/learn_bootstrap/BS_doc.html
@@ -44,7 +44,7 @@
             1 of 3
           </div>
           <div class="col-md-auto cbg">
-            Variable width content
+            Variable width content ccccc
           </div>
           <div class="col col-lg-2 cbg">
             3 of 3
