The all property'

--- a/css-doc/inheritance.html
+++ b/css-doc/inheritance.html
@@ -33,6 +33,13 @@
             </ul>
         </li>
     </ul>
+    <blockquote>
+        <p>This blockquote is styled</p>
+    </blockquote>
+
+    <blockquote class="fix-this">
+        <p>This blockquote is not styled</p>
+    </blockquote>
 </body>
 
 </html>
