--- a/css-doc/before_after/index.html
+++ b/css-doc/before_after/index.html
@@ -8,6 +8,7 @@
 
 <body>
   <p class="box">Content in the box in my HTML page.</p>
+  <p class="box_one">Content in the boxx in my HTML page.</p>
 
 </body>
 
