alternate and standard box sizing

--- a/css-doc/box_model/index.html
+++ b/css-doc/box_model/index.html
@@ -17,6 +17,9 @@
     <li>Item Three</li>
   </ul>
   <p>I am another paragraph. Some of the <span class="block">words</span> have been wrapped in a <span>span element</span>.</p>
+
+  <div class="box">I use the standard box model.</div>
+  <div class="box alternate">I use the alternate box model.</div>
 </body>
 
 </html>
