--- a/css-doc/box_model/index.html
+++ b/css-doc/box_model/index.html
@@ -20,6 +20,11 @@
 
   <div class="box">I use the standard box model.</div>
   <div class="box alternate">I use the alternate box model.</div>
+
+  <div class="container">
+      <p class="one">I am paragraph one.</p>
+      <p class="two">I am paragraph two.</p>
+    </div>
 </body>
 
 </html>
