--- a/learn_bootstrap/checkbox_test_two/index.html
+++ b/learn_bootstrap/checkbox_test_two/index.html
@@ -7,29 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css">
 
     <title>BS Doc</title>
 </head>
 
 <body>
-  <label class="container">One
+    <span>words</span>
+  <label class="Cus-Checkbox-Con ">Deal
     <input type="checkbox" checked="checked">
     <span class="checkmark"></span>
   </label>
-  <label class="container">Two
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
-  <label class="container">Three
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
-  <label class="container">Four
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+  <span>words</span>
 
 </body>
 
