--- a/css-doc/positioning/pos_0/3_absolute-positioning.html
+++ b/css-doc/positioning/pos_0/3_absolute-positioning.html
@@ -8,6 +8,7 @@
       body {
         width: 500px;
         margin: 0 auto;
+        position: relative;
       }
 
       p {
@@ -25,8 +26,8 @@
       .positioned {
         position: absolute;
         background: yellow;
-        /* top: 30px; */
-        /* left: 30px; */
+        top: 30px;
+        left: 30px;
         /* Use this to resize positioned elements */
         /* top: 0px;
         left: 0px;
