--- a/css-doc/positioning/pos_0/6_fixed-positioning.html
+++ b/css-doc/positioning/pos_0/6_fixed-positioning.html
@@ -25,8 +25,8 @@
 
       h1 {
         position: fixed;
-        /* top: 0px; */
-        bottom: 0px;
+        top: 0px;
+        /* bottom: 0px; */
         width: 500px;
         margin: 0 auto;
         background: white;
